theme integration part 3

--- a/app/views/event/Call_of_Duty.html.erb
+++ b/app/views/event/Call_of_Duty.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Call Of Duty</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">CALL OF DUTY</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,17 +94,26 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
-                </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
+                <h3>DAY 1</h3>
+                <br><br>
+                <p>Groups will be formed on the basis of number of registrations.<br/>
+There will be 6-8 gamers(depending on the registrations) per group competing against each other.
                 </p>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
-                </ol>
+                    <h5><li><strong>ROUND 1</strong></li></h5>
+                    <p>In round 1 all the all the gamers will compete against each other and the top gamers will be selected (this selection is purely based on the number of kills).
+                    </p>
+                <h3>DAY 2</h3>
+                <br/><br/>
+                    <h5><li><strong>ROUND 2</strong></li></h5>
+                    <p>We will select 32-40 gamers from round 1 and they will again compete in the this round.<br/>
+Top 10 will be selected in this round (max no. of kills) for the final round.
+                    </p>
+                    <h5><li><strong>FINAL ROUND</strong></li></h5>
+                    <p>From these 10 gamers top 3 will be selected.
+                    </p>
+                    <p>Note: Number of groups formed and Selection from each group depends on the number of the registrations...</p>
+                    <ol>
             </div>
             </div>
         </div>
