--- a/app/views/event/Counter_Strike.html.erb
+++ b/app/views/event/Counter_Strike.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Counter Strike</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">COUNTER STRIKE</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,17 +94,23 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
+                <p>Counter-Strike is a first-person shooter game in which players join either the terrorist team, the counter-terrorist team, or become spectators. Each team attempts to complete their mission objective and/or eliminate the opposing team.
                 </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
-                </p>
-                <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
-                </ol>
+                <h3><strong><ins>THEME</ins></strong></h3>
+                <ul>
+                    <li>Theme Based only on counter strike.</li>
+                    <li>Gaming room will be dark and managed as the Counter strike GUI.</li>
+                    <li>Good sound effect is use to make game room look more familiar for the gamers.</li>
+                </ul>
+                <hr/>
+                    <h3><strong><ins>RULES AND REGULATIONS</ins></strong></h3>
+                <ul>
+                    <li>Only 5 members allow in a team.</li>
+                    <li>On the spot registration and pre-registrations are allowed.</li>
+                    <li>Participation fee charged as<br/>
+                        50 rupees x 5 persons = 250/-</li>
+                    <li>Cross-collegiate and school team are allowed to participate.</li>
+                </ul>
             </div>
             </div>
         </div>
