--- a/app/views/event/Dota2.html.erb
+++ b/app/views/event/Dota2.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Dota 2</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">DOTA 2</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,17 +94,84 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
+                <hr/>
+                <h1>DOTA 2</h1>
+                <hr/>
+                <p>Dota 2 is a free¬to¬play multiplayer online battle arena (MOBA) video game developed and published by Valve Corporation. Dota will have two events:<br/>
+                • One-On-One knockout rounds<br/>
+                • Team event
                 </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
-                </p>
+                
+                 <h3><strong><ins>ROUND WISE DESCRIPTION</ins></strong></h3>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
+                    <h5><li><strong>ONE-ON-ONE KNOCKOUT ROUNDS</strong></li></h5>
+                    <p>One-on-one knockout rounds will be the pre hype event on the 1st day where players can register on the spot by giving an amount of ₹ 30. Players will be given same character. It will be a bo3, toss for the hero or side pick in 1st game. Allowed heroes will be told on the spot. Winners will be awarded the prize goodies total worth the amount collected by the registration desk. 
+                    </p>
+                    <ul>
+                        <li>Event will take place on day 1.</li>
+                        <li>Lg 6 lab.</li>
+                        <li>Mode: 1v1 solo mid mode.</li>
+                        <li>Prizes: 1st and 2nd position will get a prize amount based on the money collected.</li>
+                    </ul>
+                    <h5><li><strong>TEAM EVENT</strong></li></h5>
+                    <p>Team event is the main attraction where teams of 5 players will compete in the event.All the team members should be present there. Teams will compete with each other on the basis of first come basis when they register for the event. ¬
+                    </p>
+                    <ul>
+                        <li>Event will take place on day 2.</li>
+                        <li>Lg 6 lab.</li>
+                        <li>Mode: Captains mode</li>
+                        <li>Prizes: 1st and 2nd position will get a prize amount based on the money collected.</li>
+                    </ul>
+                    <hr/>
+                    <h3><strong><ins>RULES AND REGULATIONS</ins></strong></h3>
+                <ul>
+                    <li>All participants should bring their own gaming mouse and keyboard.</li>
+                    <li>All team members should be present there at the event.No online player would be eligible to play and club with members.</li>
+                    <li>Teams will compete each other in a knockout round.</li>
+                    <li>There is no boundation on the minimum or maximum MMR of the player.</li>
+                    <li>Cash prizes and goodies will be distributed at the end of the event.</li>
+                    <li>In the one vs one event winner will be the one who takes the mid tower first or two kills of the opponent.</li>
+                </ul>
+                <h3><strong><ins>FAQS</ins></strong></h3>
+                <ol>
+                    <li>How to register?</li>
+                    <p>Ans.</p>
+                    <li>Can a player play for two teams?</li>
+                    <p>Ans. No player is eligible to play for more than one team in the event</p>
+                    <li>Is there any limitations on the heroes and picking/drafting?</li>
+                    <p>Ans. No. There is no ban on any hero.</p>
                 </ol>
+                    
+                <p>Drafting in the 5v5 event will be done using captains mode.</p>
+                <p>For further queries contact :-<br/>
+Sahil Suneja (9899620634)<br/>
+Sachin Hasija (8010324072)<br/>
+Anant Kaushik (7503760865)<br/>
+Rohit Juneja (8800110323)<br/>
+</p>
+                    <hr/>
+                <h1>FIFA</h1>
+                <hr/>
+                <p>For all the FIFA players out there, Avensis Technical Team is organising the event "FIFA" where u can play and compete against some of the best players out there. So grab your chance to play with these players through us.  
+                </p>
+                
+                 <h3><strong><ins>ROUND WISE DESCRIPTION</ins></strong></h3>
+                <ol>
+                    <h5><li><strong>ROUND 1: Preliminary Round</strong></li></h5>
+                    <p>Knockout rounds will be arranged on the first two days. The winner proceeds while the loser leaves. 
+                    </p>
+                    <h5><li><strong>ROUND 2: Final Round</strong></li></h5>
+                    <p>Winners from the first round will be selected to play round two. Players who wins in round two proceeds to the finals.
+                    </p>
+                    <hr/>
+                    <h3><strong><ins>RULES AND REGULATIONS</ins></strong></h3>
+                <ul>
+                    <li>Starting rounds will be played for 3-4 minutes.</li>
+                    <li>30-32 players will be selected to play the round two.</li>
+                    <li>Winners will be selected on the basis of the scores.  </li>
+                    <li>FIFA will consists of two rounds - the preliminary round decides which players proceed to the final round.</li>
+                    <li>Decision of the event heads and chief organisers will be final in all regards.</li>
+                    <li>There will be a participation fees of Rs. __</li>
             </div>
             </div>
         </div>
