--- a/app/views/event/Live_Roast.html.erb
+++ b/app/views/event/Live_Roast.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Live Roast</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">LIVE ROAST</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,16 +94,31 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
+                <p>No. of Rounds : 4<br>
+                    Only condition : Be hilarious<br/>
+                    Only request : Keep it classy
                 </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
-                </p>
+                <h3><strong><ins>THEME & RULES :</ins></strong></h3>
+                <ul>
+                    <h5><li><strong>ROUND 1: Gang Roast (Open)</strong></li></h5>
+                    <p>Participants can enter in a group or as a lone wolf. They will be asked to describe each other in the humrous way possible, showcase their wits.
+                    </p>
+                    <h5><li><strong>ROUND 2: Celebrity Mock-Up (30 Roastees)</strong></li></h5>
+                    <p>This level onwards everyone is on their own. In this level, they’ll be shown images of some well-known individuals and all they have to do is talk about them for two minutes, splash some good-natured mockery.
+                    </p>
+                    <h5><li><strong>ROUND 3: Enact-A-Roast (12 Roastees)</strong></li></h5>
+                    <p>Participants will be paired up for this round. Each pair will be given a personality, situation, or a trait and they are required to roast each other restriciting to the personality, situation, or a trait.
+                    </p>
+                    <h5><li><strong>ROUND 4: Brute Force (4 Roastees)</strong></li></h5>
+                    <p>Final competition boils down to 4 participants. They’re expected to fire away all kind of insulting jokes, exhaust everything in their arsenal and break each others’ composure.
+                    </p>
+                    </ul>
+                
+                <hr/>
+                <h3><strong><ins>WILD CARD</ins></strong></h3>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
+                    <li>One-liners: give sarcastic comments to photos we post online. Best two get direct entry to 2nd round.</li>
+                    <li>Dubsmash: record a hilarious dubsmash of our choicea and post it online. Best two get direct entry to 2nd round.</li>
                 </ol>
             </div>
             </div>
