--- a/app/views/event/Online_Coding.html.erb
+++ b/app/views/event/Online_Coding.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Online Coding</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">ONLINE CODING</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,16 +94,18 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
+                <p>Programming is not a rocket science. It needs time, persistence and efforts to master. All you need is a Computer and an Internet Connection. 
                 </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
+                <p>Let's get ready to solve the real world problems by your programming skills.
                 </p>
+                <h3><strong><ins>ROUND-WISE DESCRIPTION</ins></strong></h3>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
+                    <h5><li><strong>ROUND 1: Mains</strong></li></h5>
+                        <p>You will be given 5 Coding Questions and 5 Multiple Choice Questions and a total of 90 minutes. All you have to do is to solve the problems in least time show how fast and precise you can be when it comes to real challenges. Top 2 teams from every college will be given a chance to move to the next round.
+                        </p>
+                    <h5><li><strong>ROUND 2: Advanced</strong></li></h5>
+                        <p>We know you love challenges, that why we came up with little hard problems. You will be served with 6Coding Challenges and a total time of 2 hours. The number of problems solved in the total time will judge the final winners. Top 10 winners will be awarded with prizes and goodies and since MSIT is hosting this contest, we are also awarding the winner from MSIT if the team is not in top 10.
+                        </p>
                 </ol>
             </div>
             </div>
