--- a/app/views/event/Spell_Bee.html.erb
+++ b/app/views/event/Spell_Bee.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Spell Bee</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">SPELL BEE</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,17 +94,42 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
+                <p>Hey folks "AVENSIS-The tech fest" is back. Lit group is here with one of the most popular event "SpellBee"!!!!!!
                 </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
+                <p>Contestant will be asked to spell a broad collection of words,with varying degree of difficulty...
                 </p>
+                <p>Explore the best in you!!!! And u will be known as " King of the word"
+                </p>
+                <h3><strong><ins>ROUND-WISE DESCRIPTION</ins></strong></h3>
+                <p>The event will consist of 2 rounds :-</p>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
+                    <h5><li><strong>PRELIMS</strong></li></h5>
+                    <p>This will be the initial screening round where contestants will be tested on their vocabulary skills .
+                    </p>
+                    <p>They'll be asked to answer a set  questions consisting of riddles, spellings, editing,synonyms, word formations etc. <br/>
+                        (Most probably written)
+                    </p>
+                    <p>**The event can be preferably organised in any classroom under strict supervision of the coordinators to prohibit usage of cell phones.
+                    </p>
+                    <p>Depending on the number of applicants, we'll select students for the finals.
+                    </p>
+                    <h5><li><strong>FINALS</strong></li></h5>
+                    <p>This is where the actual spellbee comes into play. It will be an oral round based on standard spelling bee procedure.
+                    </p>
+                    <p>**Two judges will be judging you on different basis**</p>
+                    <p>There will be few exciting rounds:
+                    </p>
+                    <p>The speller may ask the pronouncer to say the word again, define it, and/or use it in a sentence.
+                    </p>
+                    <p>And some thing like rapid fire
+                    </p>
+                    <p>Exciting prizes and goodies are waiting for you!!!</p>
                 </ol>
+                <hr/>
+                <p>Aastik Sharma 9873084691<br/>
+Sanchita 9582039308
+                </p>
+                
             </div>
             </div>
         </div>
