--- a/app/views/event/FIFA.html.erb
+++ b/app/views/event/FIFA.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>FIFA</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">FIFA</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,17 +94,29 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
+                    <hr/>
+                <h1>FIFA</h1>
+                <hr/>
+                <p>For all the FIFA players out there, Avensis Technical Team is organising the event "FIFA" where u can play and compete against some of the best players out there. So grab your chance to play with these players through us.  
                 </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
-                </p>
+                
+                 <h3><strong><ins>ROUND WISE DESCRIPTION</ins></strong></h3>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
-                </ol>
+                    <h5><li><strong>ROUND 1: Preliminary Round</strong></li></h5>
+                    <p>Knockout rounds will be arranged on the first two days. The winner proceeds while the loser leaves. 
+                    </p>
+                    <h5><li><strong>ROUND 2: Final Round</strong></li></h5>
+                    <p>Winners from the first round will be selected to play round two. Players who wins in round two proceeds to the finals.
+                    </p>
+                    <hr/>
+                    <h3><strong><ins>RULES AND REGULATIONS</ins></strong></h3>
+                <ul>
+                    <li>Starting rounds will be played for 3-4 minutes.</li>
+                    <li>30-32 players will be selected to play the round two.</li>
+                    <li>Winners will be selected on the basis of the scores.  </li>
+                    <li>FIFA will consists of two rounds - the preliminary round decides which players proceed to the final round.</li>
+                    <li>Decision of the event heads and chief organisers will be final in all regards.</li>
+                    <li>There will be a participation fees of Rs. __</li>
             </div>
             </div>
         </div>
