--- a/app/views/event/Parliamentary_Debate.html.erb
+++ b/app/views/event/Parliamentary_Debate.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LAN Gaming</title>
+    <title>Parliamentary Debate</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">LAN GAMING</font></strong>
+                <strong><font color="#fcac45", size="7">PARLIAMENTARY DEBATE</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,17 +94,18 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>LAN gaming is a multiplayer event.
-                </p>
-                <p>It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.
-                </p>
+                <h3><strong><ins>ROUND-WISE DESCRIPTION</ins></strong></h3>
                 <ol>
-                    <li><h3><strong><a href="LAN/Counter_Strike.html">Counter Strike</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/NFS.html">NFS</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Call_of_Duty.html">Call of Duty</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/Dota2.html">Dota 2</a></strong></h3></li>
-                    <li><h3><strong><a href="LAN/FIFA.html">FIFA</a></strong></h3></li>
+                    <h5><li><strong>ROUND 1</strong></li></h5>
+                        <p>Opening statement or speeches (general) by parliamentarians on the issue. <br/>
+                            *Press Conference for 15 minutes.         
+                        </p>
+                    <h5><li><strong>ROUND 2</strong></li></h5>
+                        <p>Moderated caucas like discussion on subagenda passed by committee (or one for one against for 60 seconds).  <br/>
+                            *Resolution and voting
+                        </p>
                 </ol>
+                <hr/>
             </div>
             </div>
         </div>
