--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -15,7 +15,7 @@
           <th>Email</th>
           <th>Mobile</th>
         </tr>
-        <% @obj.each do |obj| %>
+        <% @arr.each do |obj| %>
           <tr>
              <td><%= obj.name %></td>
              <td><%= obj.college %></td>
