--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -863,29 +863,27 @@ Healthiest competition occurs when average people win by putting above average e
                         <div class="clearfix"></div>
                     </div>
 
-                    <form action="http://formspree.io/avensis2k16@gmail.com.com" method="POST">
-                        <div class="row">
+                        <%=form_for :contact, url:'/welcome/contact' do |f|%>                        <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="exampleInputName">Name</label>
-                                    <input type="text" class="form-control" id="exampleInputName" placeholder="Enter Name">
+                                    <%= f.label 'Name' %>
+                                    <%= f.text_field :name,:class=>'form-control' %>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                                    <%= f.label 'Email'%>
+                                    <%= f.text_field :email, :class=>'form-control' %>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Message</label>
-                            <textarea class="form-control" rows="3" placeholder="Enter Message"></textarea>
+                            <%=f.label 'Message'%>
+                            <%= f.text_area :message, :class=>"form-control"%>
                         </div>
                         
-                        <button type="submit" class="btn tf-btn btn-default">Submit</button>
-                    </form>
-
+                        <%= f.submit "Submit", :class=>"btn tf-btn btn-default"%>
+<%end%>
                 </div>
             </div>
 
